--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/Liamwrigley/github-progress-tracking#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3"
   }
 }
