--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "mongoose": "^7.4.2",
     "socket.io": "^4.7.2"
   }
 }
