--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.4.2",
     "node-schedule": "^2.1.1",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
