--- a/ui/package.json
+++ b/ui/package.json
@@ -2,10 +2,13 @@
   "name": "ui",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4001",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "bootstrap-icons": "^1.10.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
@@ -36,7 +39,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4001",
   "devDependencies": {
     "tailwindcss": "^3.3.3"
   }
