--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "daisyui": "^3.5.1",
     "tailwindcss": "^3.3.3"
   }
 }
