--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Liamwrigley/github-progress-tracking#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
