profile update and rename urls to reporookie

--- a/ui/public/manifest.json
+++ b/ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "GPT",
-  "name": "Github Progress Tracker",
+  "short_name": "RR",
+  "name": "RepoRookie!",
   "icons": [
     {
       "src": "favicon.ico",
